# PROTRDX

./: .env.example  Makefile  README.md  pyproject.toml
app/backend/: main.py
app/backend/core/: config.py  database.py  logger.py  security.py
app/backend/models/: base.py  job.py  job_result.py  setting.py  ticker.py
app/backend/prompts/: system_prompt.txt  user_prompt_template.txt
app/backend/routes/: charts.py  jobs.py  run.py  settings.py  watchlist.py
app/backend/schemas/: job.py  setting.py  ticker.py
app/backend/scripts/: seed.py
app/backend/services/: backtest.py  features.py  gatekeeper.py  pipeline.py  report.py  research.py  scheduler.py  strategy.py
app/backend/tests/: conftest.py  test_api.py  test_backtest.py  test_features.py  test_gatekeeper.py  test_research.py  test_strategy.py
app/frontend/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
app/frontend/app/: layout.tsx  page.tsx
app/frontend/lib/: api.ts
app/infra/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
